--- a/AnvilRendering/AnvilRendering.vcxproj
+++ b/AnvilRendering/AnvilRendering.vcxproj
@@ -224,6 +224,10 @@
     <Image Include="GAPI_render\res\indicator_capturing.png" />
     <Image Include="GAPI_render\res\indicator_enabled.png" />
     <Image Include="GAPI_render\res\indicator_enabled_hotkeys.png" />
+    <Image Include="GAPI_render\res\indicator_streaming.png" />
+    <Image Include="GAPI_render\res\indicator_streaming_mic_active.png" />
+    <Image Include="GAPI_render\res\indicator_streaming_mic_idle.png" />
+    <Image Include="GAPI_render\res\indicator_streaming_mic_mute.png" />
     <Image Include="GAPI_render\res\indicator_stream_ended.png" />
     <Image Include="GAPI_render\res\indicator_stream_started.png" />
     <Image Include="GAPI_render\res\indicator_uploading.png" />
@@ -231,6 +235,10 @@
     <Image Include="GAPI_render\res\mic_active_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_idle_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_mute_w_indicator.png" />
+    <Image Include="res\indicator_streaming.png" />
+    <Image Include="res\indicator_streaming_mic_active.png" />
+    <Image Include="res\indicator_streaming_mic_idle.png" />
+    <Image Include="res\indicator_streaming_mic_mute.png" />
     <Image Include="res\indicator_stream_ended.png" />
     <Image Include="res\indicator_stream_started.png" />
   </ItemGroup>
