--- a/Crucible/Crucible.vcxproj.filters
+++ b/Crucible/Crucible.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="AudioEncoderSelection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RemoteDisplay.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TestWindow.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ProtectedObject.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="scopeguard.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
