--- a/AnvilRendering/AnvilRendering.vcxproj
+++ b/AnvilRendering/AnvilRendering.vcxproj
@@ -221,9 +221,13 @@
     <ResourceCompile Include="GAPI_render\Anvil.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="GAPI_render\res\bookmark_icon.png" />
+    <Image Include="GAPI_render\res\icon_checkmark.png" />
     <Image Include="GAPI_render\res\indicator_bookmark.png" />
     <Image Include="GAPI_render\res\indicator_cache_limit.png" />
     <Image Include="GAPI_render\res\indicator_capturing.png" />
+    <Image Include="GAPI_render\res\indicator_color_bar.png" />
+    <Image Include="GAPI_render\res\indicator_color_bar_error.png" />
     <Image Include="GAPI_render\res\indicator_enabled.png" />
     <Image Include="GAPI_render\res\indicator_enabled_hotkeys.png" />
     <Image Include="GAPI_render\res\indicator_streaming.png" />
@@ -234,7 +238,11 @@
     <Image Include="GAPI_render\res\indicator_stream_started.png" />
     <Image Include="GAPI_render\res\indicator_uploading.png" />
     <Image Include="GAPI_render\res\indicator_uploaded.png" />
+    <Image Include="GAPI_render\res\live_icon.png" />
     <Image Include="GAPI_render\res\mic_active_w_indicator.png" />
+    <Image Include="GAPI_render\res\mic_icon.png" />
+    <Image Include="GAPI_render\res\mic_icon_idle.png" />
+    <Image Include="GAPI_render\res\mic_icon_muted.png" />
     <Image Include="GAPI_render\res\mic_idle_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_mute_w_indicator.png" />
   </ItemGroup>
