--- a/Crucible/Crucible.vcxproj
+++ b/Crucible/Crucible.vcxproj
@@ -58,7 +58,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>dbghelp.lib;obs.lib;ipc-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>obs.lib;ipc-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -74,7 +74,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>dbghelp.lib;obs.lib;ipc-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>obs.lib;ipc-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
