--- a/AnvilRendering/AnvilRendering.vcxproj
+++ b/AnvilRendering/AnvilRendering.vcxproj
@@ -222,6 +222,8 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="GAPI_render\res\bookmark_icon.png" />
+    <Image Include="GAPI_render\res\empty_icon.png" />
+    <Image Include="GAPI_render\res\forge_indicator_icon.png" />
     <Image Include="GAPI_render\res\icon_checkmark.png" />
     <Image Include="GAPI_render\res\indicator_bookmark.png" />
     <Image Include="GAPI_render\res\indicator_cache_limit.png" />
@@ -245,6 +247,9 @@
     <Image Include="GAPI_render\res\mic_icon_muted.png" />
     <Image Include="GAPI_render\res\mic_idle_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_mute_w_indicator.png" />
+    <Image Include="GAPI_render\res\mic_shortcut_icon.png" />
+    <Image Include="GAPI_render\res\replay_icon.png" />
+    <Image Include="GAPI_render\res\screenshot_icon.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AnvilRendering\cursors\aliasb.cur" />
