--- a/AnvilRendering/AnvilRendering.vcxproj
+++ b/AnvilRendering/AnvilRendering.vcxproj
@@ -248,6 +248,7 @@
     <Image Include="GAPI_render\res\mic_idle_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_mute_w_indicator.png" />
     <Image Include="GAPI_render\res\mic_shortcut_icon.png" />
+    <Image Include="GAPI_render\res\quick_clip_icon.png" />
     <Image Include="GAPI_render\res\replay_icon.png" />
     <Image Include="GAPI_render\res\screenshot_icon.png" />
   </ItemGroup>
