--- a/AnvilRendering/AnvilRendering.vcxproj.filters
+++ b/AnvilRendering/AnvilRendering.vcxproj.filters
@@ -223,6 +223,9 @@
     <Image Include="GAPI_render\res\quick_clip_icon.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="GAPI_render\res\mic_icon_disconnected.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="GAPI_render\Anvil.rc">
