Add remote audio buffer source
WIP: Adapted from the framebuffer source but needs more work on IPC data format to better suit audio

--- a/Crucible/Crucible.vcxproj
+++ b/Crucible/Crucible.vcxproj
@@ -78,6 +78,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AudioBufferSource.cpp" />
     <ClCompile Include="AudioEncoderSelection.cpp" />
     <ClCompile Include="Crucible.cpp" />
     <ClCompile Include="RemoteDisplay.cpp" />
