--- a/Crucible/Crucible.vcxproj.filters
+++ b/Crucible/Crucible.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="NVENC">
+      <UniqueIdentifier>{da5ddc43-091d-4598-9e4c-e274f892a5d1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Crucible.cpp">
@@ -35,6 +38,9 @@
     </ClCompile>
     <ClCompile Include="AudioBufferSource.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NVENC\Encoder.cpp">
+      <Filter>NVENC</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +70,12 @@
     </ClInclude>
     <ClInclude Include="WatchdogInfo.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NVENC\nvEncodeAPI.h">
+      <Filter>NVENC</Filter>
+    </ClInclude>
+    <ClInclude Include="NVENC\dynlink_cuda.h">
+      <Filter>NVENC</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
