--- a/Crucible/Crucible.vcxproj
+++ b/Crucible/Crucible.vcxproj
@@ -1,8 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
+    <ProjectConfiguration Include="Debug+WebRTC|Win32">
+      <Configuration>Debug+WebRTC</Configuration>
+      <Platform>Win32</Platform>
+    </ProjectConfiguration>
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
+      <Platform>Win32</Platform>
+    </ProjectConfiguration>
+    <ProjectConfiguration Include="Release+WebRTC|Win32">
+      <Configuration>Release+WebRTC</Configuration>
       <Platform>Win32</Platform>
     </ProjectConfiguration>
     <ProjectConfiguration Include="Release|Win32">
@@ -21,7 +29,20 @@
     <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug+WebRTC|Win32'" Label="Configuration">
+    <ConfigurationType>Application</ConfigurationType>
+    <UseDebugLibraries>true</UseDebugLibraries>
+    <PlatformToolset>v140</PlatformToolset>
+    <CharacterSet>MultiByte</CharacterSet>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
+    <ConfigurationType>Application</ConfigurationType>
+    <UseDebugLibraries>false</UseDebugLibraries>
+    <PlatformToolset>v140</PlatformToolset>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
+    <CharacterSet>MultiByte</CharacterSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release+WebRTC|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
@@ -34,7 +55,13 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug+WebRTC|Win32'" Label="PropertySheets">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release+WebRTC|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
@@ -44,11 +71,25 @@
     <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
     <LocalDebuggerCommandArguments>-standalone</LocalDebuggerCommandArguments>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug+WebRTC|Win32'">
+    <IncludePath>$(OBSLib);$(Boost);$(ForgeLib)\libwebrtc\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ForgeLib)\libwebrtc\lib\Debug;$(OBSBuild)\Debug;$(Boost)\stage\lib;$(OBSBuild)\..\deps\ipc-util\Debug;$(LibraryPath)</LibraryPath>
+    <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
+    <LocalDebuggerCommandArguments>-standalone</LocalDebuggerCommandArguments>
+    <OutDir>$(SolutionDir)\Debug\</OutDir>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(OBSLib);$(Boost);$(IncludePath)</IncludePath>
     <LibraryPath>$(OBSBuild)\RelWithDebInfo;$(Boost)\stage\lib;$(OBSBuild)\..\deps\ipc-util\RelWithDebInfo;$(LibraryPath)</LibraryPath>
     <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
     <LocalDebuggerCommandArguments>-standalone</LocalDebuggerCommandArguments>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release+WebRTC|Win32'">
+    <IncludePath>$(OBSLib);$(Boost);$(ForgeLib)\libwebrtc\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ForgeLib)\libwebrtc\lib\RelWithDebInfo;$(OBSBuild)\RelWithDebInfo;$(Boost)\stage\lib;$(OBSBuild)\..\deps\ipc-util\RelWithDebInfo;$(LibraryPath)</LibraryPath>
+    <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
+    <LocalDebuggerCommandArguments>-standalone</LocalDebuggerCommandArguments>
+    <OutDir>$(SolutionDir)\Release\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -60,6 +101,19 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>obs.lib;ipc-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug+WebRTC|Win32'">
+    <ClCompile>
+      <WarningLevel>Level3</WarningLevel>
+      <Optimization>Disabled</Optimization>
+      <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>WEBRTC_WIN;ANVIL_PIPE_NAME_SUFFIX=$(ANVIL_PIPE_NAME_SUFFIX);%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+    <Link>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>msdmo.lib;wmcodecdspuuid.lib;dmoguids.lib;crypt32.lib;iphlpapi.lib;ole32.lib;secur32.lib;winmm.lib;ws2_32.lib;webrtc.lib;obs.lib;ipc-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/IGNORE:4217 /IGNORE:4049 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -79,6 +133,24 @@
       <AdditionalDependencies>obs.lib;ipc-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release+WebRTC|Win32'">
+    <ClCompile>
+      <WarningLevel>Level3</WarningLevel>
+      <Optimization>MaxSpeed</Optimization>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <SDLCheck>true</SDLCheck>
+      <AdditionalOptions>/Zo %(AdditionalOptions)</AdditionalOptions>
+      <PreprocessorDefinitions>WEBRTC_WIN;ANVIL_PIPE_NAME_SUFFIX=$(ANVIL_PIPE_NAME_SUFFIX);%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+    <Link>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>msdmo.lib;wmcodecdspuuid.lib;dmoguids.lib;crypt32.lib;iphlpapi.lib;ole32.lib;secur32.lib;winmm.lib;ws2_32.lib;webrtc.lib;obs.lib;ipc-util.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalOptions>/IGNORE:4217 /IGNORE:4049 %(AdditionalOptions)</AdditionalOptions>
+    </Link>
+  </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AudioBufferSource.cpp" />
     <ClCompile Include="AudioEncoderSelection.cpp" />
@@ -88,6 +160,12 @@
     <ClCompile Include="FramebufferSource.cpp" />
     <ClCompile Include="ScreenshotProvider.cpp" />
     <ClCompile Include="TestWindow.cpp" />
+    <ClCompile Include="WebRTCOutput.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug+WebRTC|Win32'">NOMINMAX;_CRT_SECURE_NO_WARNINGS;WEBRTC_WIN;ANVIL_PIPE_NAME_SUFFIX=$(ANVIL_PIPE_NAME_SUFFIX);%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release+WebRTC|Win32'">NOMINMAX;_CRT_SECURE_NO_WARNINGS;WEBRTC_WIN;ANVIL_PIPE_NAME_SUFFIX=$(ANVIL_PIPE_NAME_SUFFIX);%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IPC.hpp" />
