Fix project debugger environments

--- a/Crucible/Crucible.vcxproj
+++ b/Crucible/Crucible.vcxproj
@@ -74,20 +74,20 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug+WebRTC|Win32'">
     <IncludePath>$(OBSLib);$(Boost);$(ForgeLib)\libwebrtc\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(ForgeLib)\libwebrtc\lib\Debug;$(OBSBuild)\Debug;$(Boost)\stage\lib;$(OBSBuild)\..\deps\ipc-util\Debug;$(LibraryPath)</LibraryPath>
-    <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
+    <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\Debug\bin\32bit\</LocalDebuggerEnvironment>
     <LocalDebuggerCommandArguments>-standalone</LocalDebuggerCommandArguments>
     <OutDir>$(SolutionDir)\Debug\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(OBSLib);$(Boost);$(IncludePath)</IncludePath>
     <LibraryPath>$(OBSBuild)\RelWithDebInfo;$(Boost)\stage\lib;$(OBSBuild)\..\deps\ipc-util\RelWithDebInfo;$(LibraryPath)</LibraryPath>
-    <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
+    <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\RelWithDebInfo\bin\32bit\</LocalDebuggerEnvironment>
     <LocalDebuggerCommandArguments>-standalone</LocalDebuggerCommandArguments>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release+WebRTC|Win32'">
     <IncludePath>$(OBSLib);$(Boost);$(ForgeLib)\libwebrtc\include;$(IncludePath)</IncludePath>
     <LibraryPath>$(ForgeLib)\libwebrtc\lib\RelWithDebInfo;$(OBSBuild)\RelWithDebInfo;$(Boost)\stage\lib;$(OBSBuild)\..\deps\ipc-util\RelWithDebInfo;$(LibraryPath)</LibraryPath>
-    <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\$(Configuration)\bin\32bit\</LocalDebuggerEnvironment>
+    <LocalDebuggerEnvironment>PATH=$(PATH);$(OBSBuild)\..\rundir\RelWithDebInfo\bin\32bit\</LocalDebuggerEnvironment>
     <LocalDebuggerCommandArguments>-standalone</LocalDebuggerCommandArguments>
     <OutDir>$(SolutionDir)\Release\</OutDir>
   </PropertyGroup>
